apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  tls:
    - hosts:
        - jellyfin.k8s.squiggle.org
      secretName: jellyfin-tls-secret
  rules:
    - host: jellyfin.k8s.squiggle.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
